--- a/client-side/src/app/block/block.component.scss
+++ b/client-side/src/app/block/block.component.scss
@@ -2,6 +2,8 @@
 
 .richTextCont{
     display: grid;
+    grid-template-columns: 1fr;
+    
     .ql-editor{
         height: inherit;
         width: inherit;
